tests/dataset/tpc-h/compiler/c/q16.error
/tmp/q16.c: In function ‘main’:
/tmp/q16.c:243:43: error: ‘(partsupp_t *)&partsupp’ is a pointer; did you mean to use ‘->’?
  243 |   list_int tmp4 = list_int_create(partsupp.len * part.len);
      |                                           ^
      |                                           ->
/tmp/q16.c:243:54: error: ‘(part_t *)&part’ is a pointer; did you mean to use ‘->’?
  243 |   list_int tmp4 = list_int_create(partsupp.len * part.len);
      |                                                      ^
      |                                                      ->
/tmp/q16.c:253:30: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  253 |             contains_string(p.p_type, "SMALL") && p.p_size == 5)) {
      |                             ~^~~~~~~
/tmp/q16.c:69:34: note: expected ‘char *’ but argument is of type ‘const char *’
   69 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/q16.c:269:31: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  269 |           ((!contains_string(s.s_comment, "Customer"))) &&
      |                              ~^~~~~~~~~~
/tmp/q16.c:69:34: note: expected ‘char *’ but argument is of type ‘const char *’
   69 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/q16.c:270:31: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  270 |           ((!contains_string(s.s_comment, "Complaints"))))) {
      |                              ~^~~~~~~~~~
/tmp/q16.c:69:34: note: expected ‘char *’ but argument is of type ‘const char *’
   69 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/q16.c:300:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  300 |     _json_string(it.s_name);
      |                  ~~^~~~~~~
/tmp/q16.c:74:32: note: expected ‘char *’ but argument is of type ‘const char *’
   74 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q16.c:304:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  304 |     _json_string(it.s_address);
      |                  ~~^~~~~~~~~~
/tmp/q16.c:74:32: note: expected ‘char *’ but argument is of type ‘const char *’
   74 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q16.c:309:7: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  309 |       result;
      |       ^~~~~~
