tests/dataset/tpc-h/compiler/c/q16.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:20Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:20Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int contains_list_int(list_int v, int item) {
  for (int i = 0; i < v.len; i++)
    if (v.data[i] == item)
      return 1;
  return 0;
}
static int contains_string(char *s, char *sub) {
  return strstr(s, sub) != NULL;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int s_suppkey;
  const char *s_name;
  const char *s_address;
  const char *s_comment;
} supplier_t;
typedef struct {
  int len;
  supplier_t *data;
} supplier_list_t;
supplier_list_t create_supplier_list(int len) {
  supplier_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(supplier_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int p_partkey;
  const char *p_brand;
  const char *p_type;
  int p_size;
} part_t;
typedef struct {
  int len;
  part_t *data;
} part_list_t;
part_list_t create_part_list(int len) {
  part_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(part_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ps_partkey;
  int ps_suppkey;
} partsupp_t;
typedef struct {
  int len;
  partsupp_t *data;
} partsupp_list_t;
partsupp_list_t create_partsupp_list(int len) {
  partsupp_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(partsupp_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *s_name;
  const char *s_address;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int
    test_Q16_returns_suppliers_not_linked_to_certain_parts_or_complaints_result;
static void
test_Q16_returns_suppliers_not_linked_to_certain_parts_or_complaints() {
  list_int tmp1 = list_int_create(0);
  int tmp2 = 1;
  if (test_Q16_returns_suppliers_not_linked_to_certain_parts_or_complaints_result
          .len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (
        int i3 = 0;
        i3 <
        test_Q16_returns_suppliers_not_linked_to_certain_parts_or_complaints_result
            .len;
        i3++) {
      if (test_Q16_returns_suppliers_not_linked_to_certain_parts_or_complaints_result
              .data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  supplier_t supplier[] = {
      (supplier_t){.s_suppkey = 100,
                   .s_name = "AlphaSupply",
                   .s_address = "123 Hilltop",
                   .s_comment = "Reliable and efficient"},
      (supplier_t){.s_suppkey = 200,
                   .s_name = "BetaSupply",
                   .s_address = "456 Riverside",
                   .s_comment = "Known for Customer Complaints"}};
  int supplier_len = sizeof(supplier) / sizeof(supplier[0]);
  part_t part[] = {(part_t){.p_partkey = 1,
                            .p_brand = "Brand#12",
                            .p_type = "SMALL ANODIZED",
                            .p_size = 5},
                   (part_t){.p_partkey = 2,
                            .p_brand = "Brand#23",
                            .p_type = "MEDIUM POLISHED",
                            .p_size = 10}};
  int part_len = sizeof(part) / sizeof(part[0]);
  partsupp_t partsupp[] = {(partsupp_t){.ps_partkey = 1, .ps_suppkey = 100},
                           (partsupp_t){.ps_partkey = 2, .ps_suppkey = 200}};
  int partsupp_len = sizeof(partsupp) / sizeof(partsupp[0]);
  list_int tmp4 = list_int_create(partsupp.len * part.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < partsupp_len; tmp6++) {
    partsupp_t ps = partsupp[tmp6];
    for (int tmp7 = 0; tmp7 < part_len; tmp7++) {
      part_t p = part[tmp7];
      if (!(p.p_partkey == ps.ps_partkey)) {
        continue;
      }
      if (!((strcmp(p.p_brand, "Brand#12") == 0) &&
            contains_string(p.p_type, "SMALL") && p.p_size == 5)) {
        continue;
      }
      tmp4.data[tmp5] = ps.ps_suppkey;
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  list_int excluded_suppliers = tmp4;
  result_item_list_t tmp8 = create_result_item_list(supplier_len);
  const char **tmp11 =
      (const char **)malloc(sizeof(const char *) * supplier_len);
  int tmp9 = 0;
  for (int tmp10 = 0; tmp10 < supplier_len; tmp10++) {
    supplier_t s = supplier[tmp10];
    if (!((!(contains_list_int(excluded_suppliers, s.s_suppkey))) &&
          ((!contains_string(s.s_comment, "Customer"))) &&
          ((!contains_string(s.s_comment, "Complaints"))))) {
      continue;
    }
    tmp8.data[tmp9] =
        (result_item_t){.s_name = s.s_name, .s_address = s.s_address};
    tmp11[tmp9] = s.s_name;
    tmp9++;
  }
  tmp8.len = tmp9;
  for (int i14 = 0; i14 < tmp9 - 1; i14++) {
    for (int i15 = i14 + 1; i15 < tmp9; i15++) {
      if (tmp11[i14] > tmp11[i15]) {
        const char *tmp12 = tmp11[i14];
        tmp11[i14] = tmp11[i15];
        tmp11[i15] = tmp12;
        result_item_t tmp13 = tmp8.data[i14];
        tmp8.data[i14] = tmp8.data[i15];
        tmp8.data[i15] = tmp13;
      }
    }
  }
  result_item_list_t result = tmp8;
  printf("[");
  for (int i16 = 0; i16 < result.len; i16++) {
    if (i16 > 0)
      printf(",");
    result_item_t it = result.data[i16];
    printf("{");
    _json_string("s_name");
    printf(":");
    _json_string(it.s_name);
    printf(",");
    _json_string("s_address");
    printf(":");
    _json_string(it.s_address);
    printf("}");
  }
  printf("]");
  test_Q16_returns_suppliers_not_linked_to_certain_parts_or_complaints_result =
      result;
  test_Q16_returns_suppliers_not_linked_to_certain_parts_or_complaints();
  free(result.data);
  return 0;
}
